--- a/index.html
+++ b/index.html
@@ -105,12 +105,20 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              A motivated and detail-oriented
+              Artificial Intelligence and Robotics
+              undergraduate with a strong passion
+              for IT management, project leadership,
+              and technical presentations.
+              Proven ability to lead and manage
+              complex projects while collaborating
+              with diverse teams to achieve
+              impactful outcomes. Skilled in
+              simplifying complex concepts for
+              varied audiences, enhancing
+              understanding and engagement. Excels
+              in roles that involve presenting,
+              coordinating, and driving innovative IT
             </p>
           </div>
         </div>
